src/sample/Errors/C0032_Initializer_Literals.st
FUNCTION_BLOCK C0032_Initializer_Literals

    VAR

        // Logical Types
        _bool_pos2:     BOOL    := 2;
        _bool_neg1:     BOOL    := -1;
        _bool_real:     BOOL    := 1.0;

        _bit_pos2:      BIT     := 2;
        _bit_neg1:      BIT     := -1;
        _bit_real:      BIT     := 1.0;

        // Bitstring Types
        _word:          WORD    := 16#FFFFFF;

        // Unsigned Integer Types
        _uint:          UINT    := 16#FFFFFF;

        // Signed Integer Types
        _int:           INT     := 16#7FFF;

        // Floating Point Types
        _real:          REAL    := 1e39;

        // String Types

        // Character Types

        // Time-Related Types
    END_VAR
END_FUNCTION_BLOCK